# rainbow-hackaton-2024

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  data.json  docker-compose.yaml  help.txt
proto/: game.proto
src/: better_game_state.rs  helpers.rs  main.rs  models.rs  points.rs
src/strategies/: dynamic_programing.rs  helpers.rs  mcts.rs  mcts_game_state.rs  min_max.rs  mod.rs  monte_carlo.rs  random.rs  strategy.rs
