[package]
name = "point-salad"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
serde_json = "1.0.128"
serde = {version = "1.0.210", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
